ajouter un display sur le footer

--- a/style.css
+++ b/style.css
@@ -54,6 +54,8 @@ a:hover {
 
 .bloc-sm {
     padding: 20px 50px;
+    display: flex;
+    justify-content: center;
 }
 
 .bg-center,
@@ -97,10 +99,6 @@ a:hover {
 
 .b-parallax {
     background-attachment: fixed;
-}
-
-.d-bloc {
-    color: rgba(255, 255, 255, .7);
 }
 
 .d-bloc button:hover {
