--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ a:hover {
 .focusedInputBlack:focus {
   border-color: #313030;
   outline: 0;
-  outline: thin dotted \9;
+  outline: thin dotted ;
   -moz-box-shadow: 0 0 8px #313030;
   box-shadow: 0 0 8px #313030!important;
 }
